2010-07-13  Maynard Johnson  <maynardj@us.ibm.com>

	* events/arm/armv7-common/events: (new)
	* events/arm/armv7-common/unit_masks: (new)
	* events/arm/armv7-ca9/events: (new)
	* events/arm/armv7-ca9/unit_masks: (new)
	  I neglected to do 'cvs add' for these new files in the
	  previous commit; doing so now.

2010-07-01  Will Deacon  <will.deacon@arm.com>

	* events/arm/armv7-common/events:
	* events/arm/armv7-common/unit_masks:
	* events/arm/armv7/events: factor out ARMv7 common architectural events
	* events/Makefile.am:
	* libop/op_cpu_type.c:
	* libop/op_cpu_type.h:
	* libop/op_events.c:
	* utils/ophelp.c: correct usage of core terminology for v7 and MPCore
	* events/arm/armv7-ca9/events:
	* events/arm/armv7-ca9/unit_masks: add support for Cortex-A9 events

2010-06-21  John Villalovos <john.l.villalovos@intel.com>

	* libop/op_cpu_type.[h,c]:
	* libop/op_events.c:
	* utils/ophelp.c: Add "i386/nehalem" as a valid cpu_type.  This will
	allow the kernel in the future (if desired) to use "i386/nehalem"
	instead of "i386/core_i7".  Core i7 processors can be either Nehalem
	or Westmere microarchitecture but the "i386/core_i7" cpu_type in
	Oprofile is only for Nehalem microarchitecture processors.

2010-06-11  William Cohen <wcohen@redhat.com>

        * libregex/stl.pat.in: Avoid machine specific configuration.

2010-05-18  Daniel Hansel  <daniel.hansel@linux.vnet.ibm.com>

	* doc/oprofile.xml: Document that only kernel versions 2.6.13 or
	  later provide support for anonymous mapped regions

2010-04-13  Maynard Johnson  <maynardj@us.ibm.com>

	* libutil++/bfd_support.cpp: Fix up translate_debuginfo_syms
	  so it doesn't rely on section index values being the same
	  between real image and debuginfo file (to resolve problem
	  reported by Will Cohen on Fedora 12)

2010-03-25  Oliver Schneider  <oliver@assarbad.net>

	* libpp/parse_filename.cpp:  Catch case where a basic_string::erase
	  error can occur in opreport when parsing an invalid sample file name
